--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!--Top line-->
-    <header>
+    <header class="header">
       <div class="container head-nav">
         <a href="./index.html" class="logo"
           >web<span class="head-logo">studio</span></a
