--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!--Top line-->
-    <header>
+    <header class="header">
       <div class="container head-nav">
         <a href="./index.html" class="logo"
           >web<span class="head-logo">studio</span></a
@@ -103,13 +103,13 @@
           <h2 class="work-second-header">what are we doing</h2>
           <ul class="work-list">
             <li class="work-list-item">
-              <img src="images/monitor.jpg" alt="monitor" width="360" />
+              <img class="block" src="images/monitor.jpg" alt="monitor" width="360" />
             </li>
             <li class="work-list-item">
-              <img src="images/phone.jpg" alt="phone" width="360" />
+              <img class="block" src="images/phone.jpg" alt="phone" width="360" />
             </li>
             <li class="work-list-item">
-              <img
+              <img class="block"
                 src="images/all.jpg"
                 alt="phone in hand and monitor on the background"
                 width="360"
@@ -128,7 +128,7 @@
                 class="work-image"
                 src="images/mark.jpg"
                 alt="Mark Guerrero photo"
-                width="260"
+                width="264"
               />
               <h3 class="third-header">Mark Guerrero</h3>
               <p class="text">Product Designer</p>
@@ -138,7 +138,7 @@
                 class="work-image"
                 src="images/tom.jpg" 
                 alt="Tom Ford photo" 
-                width="260" 
+                width="264" 
               />
               <h3 class="third-header">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
@@ -148,7 +148,7 @@
                 class="work-image"
                 src="images/camila.jpg"
                 alt="Camila Garcia photo"
-                width="260"
+                width="264"
               />
               <h3 class="third-header">Camila Garcia</h3>
               <p class="text">Marketing</p>
@@ -158,7 +158,7 @@
                 class="work-image"
                 src="images/daniel.jpg"
                 alt="Daniel Wilson photo"
-                width="260"
+                width="264"
               />
               <h3 class="third-header">Daniel Wilson</h3>
               <p class="text">UI Designer</p>
