--- a/index.html
+++ b/index.html
@@ -1,183 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!--Top line-->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&amp;family=Roboto:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
+<body>
+    <!--Header-->
     <header class="header">
-      <div class="container head-nav">
-        <a href="./index.html" class="logo"
-          >web<span class="head-logo">studio</span></a
-        >
-        <nav>
-          <ul class="nav-list">
-            <li class="nav-list-item">
-              <a href="./index.html" class="nav-anchor">Studio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="" class="nav-anchor">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list">
-            <li class="nav-list-item">
-              <a href="mailto:info@devstudio.com" class="address-anchor"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="nav-list-item">
-              <a href="tel:+110001111111" class="address-anchor tel"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+        <div class="container flex">
+            <a class="flex logo" href="./index.html">web<span class="header-logo">studio</span></a>
+            <nav class="navigation">
+                <ul class="flex navigation-list">
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="./index.html">studio</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="./portfolio.html">portfolio</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="">contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="flex">
+                    <li class="address-list-item">
+                        <a class="address-anchor" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="address-list-item">
+                        <a class="address-anchor" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
-    <!--Main content-->
+    <!--Main Content-->
     <main>
-      <!--Head-->
-      <section class="head">
-        <h1 class="first-header">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button type="button" class="order-button">Order Service</button>
-      </section>
-      <!--Features-->
-      <section class="features">
-        <div class="container">
-          <h2 class="visually-hidden">Features</h2>
-          <ul class="features-list">
-            <li class="features-list-item">
-              <h3 class="third-header">Strategy</h3>
-              <p class="text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="features-list-item">
-              <h3 class="third-header">Punctuality</h3>
-              <p class="text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="features-list-item">
-              <h3 class="third-header">Diligence</h3>
-              <p class="text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="features-list-item">
-              <h3 class="third-header">Technologies</h3>
-              <p class="text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!--What are we doing-->
-      <section class="work">
-        <div class="container">
-          <h2 class="work-second-header">what are we doing</h2>
-          <ul class="work-list">
-            <li class="work-list-item">
-              <img class="block" src="images/monitor.jpg" alt="monitor" width="360" />
-            </li>
-            <li class="work-list-item">
-              <img class="block" src="images/phone.jpg" alt="phone" width="360" />
-            </li>
-            <li class="work-list-item">
-              <img class="block"
-                src="images/all.jpg"
-                alt="phone in hand and monitor on the background"
-                width="360"
-              />
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!--Our Team cards-->
-      <section class="team">
-        <div class="container">
-          <h2 class="team-second-header">our team</h2>
-          <ul class="team-list">
-            <li class="team-box">
-              <img
-                class="work-image"
-                src="images/mark.jpg"
-                alt="Mark Guerrero photo"
-                width="264"
-              />
-              <h3 class="third-header">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
-            </li>
-            <li class="team-box">
-              <img
-                class="work-image"
-                src="images/tom.jpg" 
-                alt="Tom Ford photo" 
-                width="264" 
-              />
-              <h3 class="third-header">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
-            </li>
-            <li class="team-box">
-              <img
-                class="work-image"
-                src="images/camila.jpg"
-                alt="Camila Garcia photo"
-                width="264"
-              />
-              <h3 class="third-header">Camila Garcia</h3>
-              <p class="text">Marketing</p>
-            </li>
-            <li class="team-box">
-              <img
-                class="work-image"
-                src="images/daniel.jpg"
-                alt="Daniel Wilson photo"
-                width="264"
-              />
-              <h3 class="third-header">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
-            </li>
-          </ul>
-        </div>
-      </section>
+        <!--Hero-->
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-header">Effective Solutions <br>
+                    for Your Business</h1>
+                <button class="hero-button" type="button">Order Service</button>
+            </div>
+        </section>
+        <!--Features-->
+        <section class="features">
+            <div class="container">
+                <h2 class="visually-hidden">features</h2>
+                <ul class="flex">
+                    <li class="features-list-item">
+                        <h3 class="third-header">Strategy</h3>
+                        <p class="text">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="third-header">Punctuality</h3>
+                        <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="third-header">Diligence</h3>
+                        <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="third-header">Technologies</h3>
+                        <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- Work -->
+        <section class="work">
+            <div class="container">
+                <h2 class="second-header">what are we doing</h2>
+                <ul class="flex">
+                    <li class="work-list-item">
+                        <img class="block" src="images/monitor.jpg" alt="monitor" width="360">
+                    </li>
+                    <li class="work-list-item">
+                        <img class="block" src="images/phone.jpg" alt="phone" width="360">
+                    </li>
+                    <li class="work-list-item">
+                        <img class="block" src="images/all.jpg" alt="phone in hand" width="360">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- Team -->
+        <section class="team">
+            <div class="container">
+                <h2 class="second-header">our team</h2>
+                <ul class="flex">
+                    <li class="team-list-item">
+                        <img class="block" src="images/mark.jpg" alt="mark portret" width="264">
+                        <div class="team-box">
+                            <h3 class="third-header">mark guerrero</h3>
+                            <p class="text">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="block" src="images/tom.jpg" alt="tom portret" width="264">
+                        <div class="team-box">
+                            <h3 class="third-header">tom ford</h3>
+                            <p class="text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="block" src="images/camila.jpg" alt="camila portret" width="264">
+                        <div class="team-box">
+                            <h3 class="third-header">camila garcia</h3>
+                            <p class="text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="block" src="images/daniel.jpg" alt="danielportret" width="264">
+                        <div class="team-box">
+                            <h3 class="third-header">daniel wilson</h3>
+                            <p class="text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          >web<span class="foot-logo">studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+        <div class="container">
+            <a class="logo-foot" href="./index.html">web<span class="footer-logo">studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
