--- a/portfolio.html
+++ b/portfolio.html
@@ -1,202 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!--Top line-->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Porfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&amp;family=Roboto:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
+<body>
+    <!-- Header -->
     <header class="header">
-      <div class="container head-nav">
-        <a href="./index.html" class="logo"
-          >web<span class="head-logo">studio</span></a
-        >
-        <nav>
-          <ul class="nav-list">
-            <li class="nav-list-item">
-              <a href="./index.html" class="nav-anchor">Studio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="" class="nav-anchor">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list">
-            <li class="nav-list-item">
-              <a href="mailto:info@devstudio.com" class="address-anchor"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="nav-list-item">
-              <a href="tel:+110001111111" class="address-anchor tel"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </header>
-    <!--Main content-->
-    <main>
-      <section class="portfolio">
-        <div class="container">
-          <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="buttons-list">
-            <li class="button-list-item">
-              <button type="button" class="portfolio-button">All</button>
-            </li>
-            <li class="button-list-item">
-              <button type="button" class="portfolio-button">Web Site</button>
-            </li>
-            <li class="button-list-item">
-              <button type="button" class="portfolio-button">App</button>
-            </li>
-            <li class="button-list-item">
-              <button type="button" class="portfolio-button">Design</button>
-            </li>
-            <li class="button-list-item">
-              <button type="button" class="portfolio-button">Marketing</button>
-            </li>
-          </ul>
-          <ul class="cards-list">
-            <li class="cards-list-item">
-              <img
-                src="./images/banking-app-interface-concept.jpg"
-                alt="banking app layout picture"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Banking App Interface Concept</h3>
-                <p class="text">App</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="blue background"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Cashless Payment</h3>
-                <p class="text">Marketing</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/meditaion-app.jpg"
-                alt="app on laptop and phone"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Meditaion App</h3>
-                <p class="text">App</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt=" taxi driver"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Taxi Service</h3>
-                <p class="text">Marketing</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="moon in space"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Screen Illustrations</h3>
-                <p class="text">Design</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="smile woman online"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Online Courses</h3>
-                <p class="text">Marketing</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/instagram-stories-concept.jpg"
-                alt="layout something"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Instagram Stories Concept</h3>
-                <p class="text">Design</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/organic-food.jpg"
-                alt="food in a bag"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Organic Food</h3>
-                <p class="text">Web Site</p>
-              </div>
-            </li>
-            <li class="cards-list-item">
-              <img
-                src="./images/fresh-coffee.jpg"
-                alt="barista made coffee"
-                width="360"
-                class="cards-list-image"
-              />
-              <div class="cards-list-text">
-                <h3 class="third-header">Fresh Coffee</h3>
-                <p class="text">Web Site</p>
-              </div>
-            </li>
-          </ul>
+        <div class="container flex">
+            <a class="flex logo" href="./index.html">web<span class="header-logo">studio</span></a>
+            <nav class="navigation">
+                <ul class="flex navigation-list">
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="./index.html">studio</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="./portfolio.html">portfolio</a>
+                    </li>
+                    <li class="navigation-list-item">
+                        <a class="navigation-anchor" href="">contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="flex">
+                    <li class="address-list-item">
+                        <a class="address-anchor" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="address-list-item">
+                        <a class="address-anchor" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
-      </section>
+    </header>
+    <!-- Main content -->
+    <main>
+        <div class="container">
+            <section class="portfolio">
+                <h1 class="visually-hidden">porfolio</h1>
+                <!-- Buttons -->
+                <ul class="buttons-list">
+                    <li class="buttons-list-item">
+                        <button class="portfolio-button" type="button">all</button>
+                    </li>
+                    <li class="buttons-list-item">
+                        <button class="portfolio-button" type="button">web Site</button>
+                    </li>
+                    <li class="buttons-list-item">
+                        <button class="portfolio-button" type="button">app</button>
+                    </li>
+                    <li class="buttons-list-item">
+                        <button class="portfolio-button" type="button">design</button>
+                    </li>
+                    <li class="buttons-list-item">
+                        <button class="portfolio-button" type="button">marketing</button>
+                    </li>
+                </ul>
+                <!-- Images -->
+                <ul class="cards-list">
+                    <li class="cards-list-item">
+                        <img class="block" src="images/banking-app-interface-concept.jpg" alt="banking" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Banking App Interface Concept</h3>
+                            <p class="text">App</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/cashless-payment.jpg" alt="cashlest" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Cashless Payment</h3>
+                            <p class="text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/meditaion-app.jpg" alt="Meditaion" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Meditaion App</h3>
+                            <p class="text">App</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/taxi-service.jpg" alt="taxi service" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Taxi Service</h3>
+                            <p class="text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/screen-illustrations.jpg" alt="screen illustrations" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Screen Illustrations</h3>
+                            <p class="text">Design</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/online-courses.jpg" alt="online courses" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Online Courses</h3>
+                            <p class="text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/instagram-stories-concept.jpg" alt="instagram stories" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Instagram Stories Concept</h3>
+                            <p class="text">Design</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/organic-food.jpg" alt="organic food" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Organic Food</h3>
+                            <p class="text">Web Site</p>
+                        </div>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="block" src="images/fresh-coffee.jpg" alt="fresh coffee" width="360">
+                        <div class="cards-box">
+                            <h3 class="third-header">Fresh Coffee</h3>
+                            <p class="text">Web Site</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          >web<span class="foot-logo">studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+        <div class="container">
+            <a class="logo-foot" href="./index.html">web<span class="footer-logo">studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
